--- a/feature162/index.html.j2
+++ b/feature162/index.html.j2
@@ -1,5 +1,11 @@
-<html>
-   <head>
-       qrumnruowvkv
-   </head>
+<!-- apache2-index.html.j2 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>node2.local Apache server</title>
+</head>
+<body>
+    <p>qrumnruowvkv</p>
+</body>
 </html>
