Added default.yml in apache installation

--- a/feature162/index.html.j2
+++ b/feature162/index.html.j2
@@ -1,11 +1,5 @@
-<!-- apache2-index.html.j2 -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>node2.local Apache server</title>
-</head>
-<body>
-    <p>qrumnruowvkv</p>
-</body>
+<html>
+   <head>
+       qrumnruowvkv
+   </head>
 </html>
